rework GetEventStream rpc
